test/asm/fixed-point-syntax.err
error: Fixed-point constant precision must be between 1 and 31
    at fixed-point-syntax.asm(10)
error: Invalid fixed-point constant, no digits after 'q'
    at fixed-point-syntax.asm(11)
error: syntax error, unexpected symbol
    at fixed-point-syntax.asm(11)
error: syntax error, unexpected symbol
    at fixed-point-syntax.asm(12)
error: Invalid integer constant, trailing '_'
    at fixed-point-syntax.asm(13)
error: Invalid fixed-point constant, '_' after '.'
    at fixed-point-syntax.asm(14)
error: Invalid fixed-point constant, no digits after 'q'
    at fixed-point-syntax.asm(15)
warning: Precision of fixed-point constant is too large [-Wlarge-constant]
    at fixed-point-syntax.asm(16)
warning: Precision of fixed-point constant is too large [-Wlarge-constant]
    at fixed-point-syntax.asm(17)
Assembly aborted with 7 errors
