test/asm/fixed-point-syntax.asm
; good
println 3.14
println 42.
println 12_34.56_78
println 12.34_q.5
println 1_2.3_4_q15
println 1.q2

; bad
println 12.34q0
println 12.34q_15
println 12.34q1_5
println 1_.2
println 1._2
println 1.2q
println 1.999_999_999_999_999
println 1.999_999_999_999_999q.16
